--- a/lang/dump_en.json
+++ b/lang/dump_en.json
@@ -1,16 +1,40 @@
-﻿{	"version": 1,
+{	"version": 1,
 	"strings": [
+		["GEN00001","Exit"],
+		["GEN00002","OK"],
+		["GEN00003","Cancel"],
+		["GEN00004","STABLE"],
+		["GEN00005","RC (Release Candidate)"],
+
 		["INST0001","NiceHash QuickMiner is already installed in:"],
 		["INST0002","Would you like to overwrite this installation?"],
+		["INST0003","Download and Install"],
+		["INST0004","Language:"],
+		["INST0005","Installation folder:"],
+		["INST0006","Browse"],
+		["INST0007","Version type:"],
+		["INST0008","Create a shortcut on Desktop"],
+		["INST0009","Run NiceHash QuickMiner after installation"],
+		["INST0010","Download and Install"],
+		["INST0011","Downloading and installing, please wait..."],
+		["INST0012","Unable to start excavator.exe; error:"],
+		["INST0013","If AV is blocking the file, allow it or make an exception then repeat the installation."],
+		["INST0014","Unable to start NiceHashQuickMiner.exe; error:"],
+		["INST0015","has been successfully installed! Thank you for your support!"],
 
 		["PROG0001","NiceHash QuickMiner is already running!"],
 		["PROG0002","It has been detected that NiceHah QuickMiner has crashed your PC."],
 		["PROG0003","Would you like to reset all set OPTIMIZE profiles back to default (Manual) value for all video cards?"],
+		["PROG0004","Cannot start NiceHash QuickMiner.Error:\n\n - missing files\n\nSome files were deleted by a 3rd party program - most likely AV."],
+		["PROG0005","Error installing!\n\nNiceHash QuickMiner was unable to continue with the installation. Error:"],
+		["PROG0006","Unable to initialize NVML.\n\nNiceHash QuickMiner does not work without any NVIDIA devices!"],
+		["PROG0007","Could not get NVIDIA driver version!"],
+		["PROG0008","Invalid NVIDIA driver version. Minimum is 461.33.\n\nPlease, install latest NVIDIA drivers!"],
+		["PROG0009","No compatible hardware detected!\n\nIf you have compatible hardware, please, try to reboot your PC."],
 
 		["FRM10001","IMPORTANT! You can control NiceHash QuickMiner through context menu. Right mouse click NiceHash Icon in your Windows Notifications taskbar. View following picture as an example:"],
 		["FRM10002","Okay, I have tested it and I understand it! Close this Dialog now."],
 		["FRM10003","Loading: "],
-		["FRM10004","Exit"],
 		["FRM10005","About"],
 		["FRM10006","Export logs"],
 		["FRM10007","Full detailed logging"],
@@ -51,5 +75,76 @@
 		["FRM10060","Failed to restart Excavator! Please, restart NiceHash QuickMiner to fix this issue!"],
 		["FRM10061","All done! Logs have been exported into a single .zip file:"],
 		["FRM10062","Your Mining BTC address has been redacted out and only past 6 hour of logs are included to reduce file size. You should attach this file when submitting an issue/bug report."],
-		["FRM10063","Failed to export logs, reason:"]
+		["FRM10063","Failed to export logs, reason:"],
+		["FRM10064","Export log files to a ZIP file"],
+		["FRM10070","Optimize stability by activating Message Signaled Interrupts (MSI) for all supported video cards. Your mining rig may get significantly improved stability.\n\nDANGER! In some rare cases, this action may break your display drivers. It is recommended to make a system restore before activating MSI.\n\nActivate MSI now?"],
+		["FRM10071","Action failed, error:"],
+		["FRM10072","All video cards are already optimized!"],
+		["FRM10073","Success! Following video cards were optimized:"],
+
+		["FRM20001","Invalid or no mining Bitcoin Address set. Please enter your NiceHash Mining Address:"],
+		["FRM20002","Clipboard paste"],
+		["FRM20003","enter your mining address here"],
+		["FRM20005","Don't know where to get it? Login to your NiceHash account then go to this page:"],
+		["FRM20006","Invalid BTC Address. Entered address is not correct."],
+
+		["UINS0001","Uninstall"],
+		["UINS0002","Please, select the following options before uninstalling NiceHash QuickMiner:"],
+		["UINS0003","Keep config file (nhqm.conf)."],
+		["UINS0004","Keep command files (*.json) which contain overclocks and fan settings."],
+		["UINS0005","Keep log files."],
+
+		["GAME0001","Game Mode Options"],
+		["GAME0002","Detected primary GPU with connected display:"],
+		["GAME0003","Overclock values to apply on primary GPU when Game Mode Active:"],
+		["GAME0004","TDP"],
+		["GAME0005","Core clock delta"],
+		["GAME0006","Memory clock delta"],
+		["GAME0007","Set fan to automatic"],
+
+		["ABT00001","Version:"],
+
+		["FRM90001","Optional Settings"],
+		["FRM90002","Let's configure following settings which are not mandatory, but recommended to configure. If you are in a hurry, you can skip this and configure later via config file (nhqm.conf)."],
+		["FRM90003","Skip >>"],
+		["FRM90004","Language"],
+		["FRM90005","Name"],
+		["FRM90006","Autostart"],
+		["FRM90007","Error Handling"],
+		["FRM90008","Tips & Tricks"],
+		["FRM90009","Rig Manager"],
+		["FRM90010","Interface language"],
+		["FRM90011","Give your mining rig unique and cool name!"],
+		["FRM90012","Worker name:"],
+		["FRM90013","Would you like NiceHash QuickMiner to automatically start with Windows?"],
+		["FRM90014","Autostart with Windows (Task Scheduler method)"],
+		["FRM90015","How to handle your PC when video card(s) crash?"],
+		["FRM90016","Error handle action:"],
+		["FRM90017","Do nothing"],
+		["FRM90018","Restart Excavator(Default)"],
+		["FRM90019","Reboot Rig(Recommended)"],
+		["FRM90020","Restart NVIDIA Driver"],
+		["FRM90021","There are many more settings you can configure. Check NiceHash QuickMiner Wiki for Tips and Tricks."],
+		["FRM90022","RECOMMENDED! Do not forget to check out One - Click - Optimize solution for GTX 1000 series, TITAN V, RTX 2000 series, TITAN RTX and RTX 3000 series desktop video cards.High reliability and very good efficiency guaranteed!"],
+		["FRM90023","If you are a beginner, we recommend you to go to Rig Manager now.If you would like to manually tune your video card(s), go to the next page."],
+		["FRM90024","Take me to the Rig Manager >>"],
+		["FRM90025","It may take several minutes for your Miner to appear in the Rig Manager.Please, be patient!"],
+		["FRM90026","OCTune is a powerful overclocking tool, designed to cover all the needs of every single miner. It is powerful enough to support modifications of core clocks, memory clocks, power limits, has ability to modify fan behavior and allows you to undervolt video cards to reduce power consumption and increase efficiency. Turn off any other overclocking tool and let OCTune take full control!"],
+		["FRM90027","Open OCTune to tweak >>"],
+
+		["F0100001","Automatically starting soon..."],
+		["F0100002","OPTIMIZE Reset"],
+		["F0100003","Start"],
+		["F0100004","You can reset optimization before it is applied to avoid PC crash caused by incompatible optimization profile."],
+
+		["UPDT0001","New version available"],
+		["UPDT0002","NiceHash QuickMiner v"],
+		["UPDT0003"," is available.\n\nWould you like to update now?"],
+		["UPDT0004","New version downloaded"],
+		["UPDT0005","NiceHash QuickMiner v"],
+		["UPDT0006"," has been downloaded.\n\nNiceHash QuickMiner has to be restarted in order for update to complete. Click OK to restart it when you are ready. It is recommended to check your settings after update to make sure NiceHash QuickMiner is running properly as expected."],
+		["UPDT0007","New feature available"],
+		["UPDT0008","NiceHash QuickMiner has been successfully updated to v"],
+		["UPDT0009",".\n\nNew version can automatically detect and choose best service location with very high reliability. It also has automatic fallback to secondary location when there is an outage or maintenance at primary location. Would you like to turn on automatic service location feature?"],
+		["UPDT0010",".\n\nNew version increases security of your mining. For this to work properly, we had to modify Excavator's launch command line.Click Yes if you agree to reset it. If you do not reset it, NiceHash QuickMiner may not work properly."]
 ]}
