--- a/lang/avail1.json
+++ b/lang/avail1.json
@@ -1,5 +1,6 @@
 {
 	"langs" : [
+		{ "short" : "sl", "name" : "Slovenian", "version" : 1 },
 		{ "short" : "zz", "name" : "Test", "version" : 1 }
 	]
 }
