--- a/lang/sl.json
+++ b/lang/sl.json
@@ -1,9 +1,9 @@
-{	"version": 1,
+{	"version": 2,
 	"strings": [
 		["GEN00001","Izhod"],
-		["GEN00002","v redu"],
+		["GEN00002","V redu"],
 		["GEN00003","Prekliči"],
-		["GEN00004","Stabilen."],
+		["GEN00004","Stabilen"],
 		["GEN00005","RC (Release Candidate)"],
 
 		["INST0001","Nicehash QuickMiner je že nameščen v:"],
@@ -14,13 +14,13 @@
 		["INST0006","Brskaj"],
 		["INST0007","Vrsta različice:"],
 		["INST0008","Ustvarite bližnjico na namizju"],
-		["INST0009","Zaženi Nicehash QuickMiner po namestitvi"],
+		["INST0009","Po namestitvi zaženi Nicehash QuickMiner"],
 		["INST0010","Prenesite in namestite"],
 		["INST0011","Prenašanje in nalaganje, počakajte ..."],
 		["INST0012","excavator.exe ni mogoče zagnati; Napaka:"],
 		["INST0013","Če AV blokira datoteko, jo dovolite ali naredite izjemo, nato ponovite namestitev."],
 		["INST0014","Ni mogoče zagnati NicehashquickMiner.exe;Napaka:"],
-		["INST0015","je bil uspešno nameščen! Hvala za tvojo podporo!"],
+		["INST0015","je bil uspešno nameščen!"],
 
 		["PROG0001","Nicehash QuickMiner že teče!"],
 		["PROG0002","Zaznano je bilo, da je Nicehah QuickMiner zrušil vaš računalnik."],
@@ -32,16 +32,16 @@
 		["PROG0008","Neveljavna različica gonilnika NVIDIA. Najmanj 461.33.\n\nProsimo, namestite najnovejše NVIDIA gonilnike!"],
 		["PROG0009","Ni zaznana združljiva strojna oprema!\n\nČe imate združljivo strojno opremo, poskusite znova zagnati računalnik."],
 
-		["FRM10001","POMEMBNO! QuickMinerja lahko nadzorujete preko kontekstnega menija. Kliknite z desnim klikom na ikono Nicehash v opravilni vrstici Windows notifikacije. Poglej na sliko za primer:"],
+		["FRM10001","POMEMBNO! QuickMinerja lahko nadzorujete preko kontekstnega menija. Z desnim klikom kliknite na ikono Nicehash v opravilni vrstici Windows. Poglej sliko za primer:"],
 		["FRM10002","Ok, testiral sem in razumem! Zapri to pogovorno okno."],
 		["FRM10003","Nalaganje: "],
 		["FRM10005","Vizitka"],
 		["FRM10006","Izvozi dnevnike"],
-		["FRM10007","Polni detajlni dnevniki"],
+		["FRM10007","Polni podrobni dnevniki"],
 		["FRM10008","Poglej priročnike"],
 		["FRM10009","Pomoč"],
 		["FRM10010","Zaženi z Windowsi"],
-		["FRM10011","CPU rudarstvo"],
+		["FRM10011","CPU rudarjenje"],
 		["FRM10012","Uredi ukazno datoteko."],
 		["FRM10013","Uredi konfiguracijo datoteko"],
 		["FRM10014","Nastavitve"],
@@ -50,8 +50,8 @@
 		["FRM10017","Način igre"],
 		["FRM10018","Začnite rudariti"],
 		["FRM10019","Odpri"],
-		["FRM10020","Deaktiviraj."],
-		["FRM10021","Zaženi."],
+		["FRM10020","Deaktiviraj"],
+		["FRM10021","Zaženi"],
 		["FRM10022","Ustavi"],
 		["FRM10023","Posodobitev nove različice ni uspela, razlog:"],
 		["FRM10024","Prosimo, rešite težavo ali posodobite ročno."],
@@ -70,7 +70,7 @@
 		["FRM10050","Naloga samodejnega zagona"],
 		["FRM10051","NiceHash QuickMiner naloga samodejnega zagona je bila odstranjena."],
 		["FRM10052","Ni uspelo odstraniti NiceHash QuickMiner naloge samodejnega zagona! Razlog:"],
-		["FRM10053","NNaloga samodejnga zagona NiceHash Quickminer je bila naložena uspešno.\n\nKo se Windows zažene bo NiceHash QuickMiner začel rudariti samodejno."],
+		["FRM10053","Naloga samodejnga zagona NiceHash Quickminer je bila naložena uspešno.\n\nKo se Windows zažene bo NiceHash QuickMiner začel rudariti samodejno."],
 		["FRM10054","Ni bilo mogoče namestiti Nicehash QuickMiner naloge samodejnega zagona! Razlog:"],
 		["FRM10060","Ni bilo mogoče ponovno zagnati Excavator! Prosimo, ponovno zaženite Nicehash QuickMiner za popravilo te napake!"],
 		["FRM10061","Končano! Dnevniki so bili izvoženi v enotno .zip datoteko:"],
@@ -81,8 +81,10 @@
 		["FRM10071","Ukrep ni uspel, napaka:"],
 		["FRM10072","Vse grafične kartice so že optimizirane!"],
 		["FRM10073","Uspešno! Naslednje grafične kartice so bile optimizirane:"],
+		["FRM10101","Dodatno"],
+		["FRM10102","Vklopi MSI interrupts"],
 
-		["FRM20001","Neveljaven ali mankajoč rudarksi Bitcoin naslov. Vnesite svoj rudarski naslov za NiceHash:"],
+		["FRM20001","Neveljaven rudarksi Bitcoin naslov. Vnesite svoj rudarski naslov za NiceHash:"],
 		["FRM20002","Odložišče"],
 		["FRM20003","tukaj vnesite svoj rudarski naslov"],
 		["FRM20005","Ne veste kje? Prijavite se v svoj Nicehash račun, nato pa pojdite na to stran:"],
@@ -114,22 +116,22 @@
 		["FRM90008","Nasveti & triki"],
 		["FRM90009","Upravljalec naprav"],
 		["FRM90010","Jezik vmesnika"],
-		["FRM90011","Dajte svojemu rudarju edinstveno in kulsko ime!"],
+		["FRM90011","Poimenujte workerja"],
 		["FRM90012","Ime delavca:"],
 		["FRM90013","Želite da se Nicehash QuickMiner samodejno zažene z Windowsi?"],
-		["FRM90014","Samodejni zagon z Windowsi (Metoda upravitelja opravi)"],
-		["FRM90015","Kako ravnati z vašim računalnikom, ko grafična kartica postane nedostopna?"],
-		["FRM90016","Akcija ravnanja z napakami:"],
+		["FRM90014","Samodejni zagon z Windowsi (Metoda upravitelja opravil)"],
+		["FRM90015","Kako ravnati z vašim računalnikom, ko grafična kartica postane neodzivna?"],
+		["FRM90016","Akcija:"],
 		["FRM90017","Naredi nič"],
-		["FRM90018","Ponovno zaženi Excavator(Privzeto)"],
-		["FRM90019","Ponovno zaženite PC.(Priporočeno)"],
+		["FRM90018","Ponovno zaženi Excavator (Privzeto)"],
+		["FRM90019","Ponovno zaženi PC (Priporočeno)"],
 		["FRM90020","Ponovni zagon NVIDIA gonilnikov"],
 		["FRM90021","Obstaja veliko več nastavitev, ki jih lahko konfigurirate. Preverite Nicehash QuickMiner Wiki za nasvete in trike."],
 		["FRM90022","PRIPOROČENO! Ne pozabite si ogledati - Optimizacijskih rešitev z enim klikom za GTX 1000 serijo, Titan V, RTX 2000 serijo, Titan RTX in RTX 3000 serijo namiznih grafičnih kartic. Visoka zanesljivost in zelo dobra učinkovitost zagotovljena!"],
-		["FRM90023","Če ste začetnik, vam priporočamo, da greste na upravitelja naprav sedaj.Če želite ročno overclockat grafično kartico, pojdite na naslednjo stran."],
-		["FRM90024","Pelji me na Upravljalca Naprav >>"],
+		["FRM90023","Če ste začetnik, vam priporočamo, da greste na upravitelja naprav sedaj. Če želite ročno overclockat grafično kartico, pojdite na naslednjo stran."],
+		["FRM90024","Upravljalec Naprav >>"],
 		["FRM90025","Lahko traja nekaj minut, da se vaš rudar pojavi v Upravljalcu Naprav. Prosim, bodite potrpežljivi!"],
-		["FRM90026","OCtune je močno overclocking orodje, ki zajema vse potrebe vsakega posameznega rudarja. Je dovolj močno, da podpira spremembe core clokov, memory clockov, omejitve moči, ima sposobnost spreminjanja vedenja ventilatorja in vam omogoča uporabo manjšanje voltaže grafične kartice za zmanjšanje porabe energije in povečanje učinkovitosti. Izklopite katero koli drugo orodje za overclocking in pustite, da OCtune prevzame popoln nadzor!"],
+		["FRM90026","OCtune je močno overclocking orodje, ki zajema vse potrebe vsakega posameznega rudarja. Podpira spremembe core clokov, memory clockov, omejitve moči, ima sposobnost spreminjanja vedenja ventilatorja in vam omogoča manjšanje voltaže kartice za zmanjšanje porabe in povečanje učinkovitosti. Izklopite katero koli drugo orodje za overclocking in pustite, da OCtune prevzame popoln nadzor!"],
 		["FRM90027","Odpri OCtune >>"],
 
 		["F0100001","Samodejni zagon kmalu..."],
