--- a/lang/avail1.json
+++ b/lang/avail1.json
@@ -1,6 +1,6 @@
 {
 	"langs" : [
-		{ "short" : "sl", "name" : "Slovenian", "version" : 2 },
+		{ "short" : "sl", "name" : "Slovenski", "version" : 2 },
 		{ "short" : "zz", "name" : "Test", "version" : 1 }
 	]
 }
