--- a/lang/avail1.json
+++ b/lang/avail1.json
@@ -1,6 +1,7 @@
 {
 	"langs" : [
 		{ "short" : "pt", "name" : "Português", "version" : 3 },
-		{ "short" : "sl", "name" : "Slovenski", "version" : 3 }
+		{ "short" : "ru", "name" : "Russian", "version" : 3 },
+		{ "short" : "sl", "name" : "Slovenščina", "version" : 3 }
 	]
 }
