--- a/lang/avail1.json
+++ b/lang/avail1.json
@@ -1,5 +1,6 @@
 {
 	"langs" : [
+		{ "short" : "de", "name" : "Deutsch", "version" : 3 },
 		{ "short" : "pt", "name" : "Português", "version" : 3 },
 		{ "short" : "ru", "name" : "Русский", "version" : 3 },
 		{ "short" : "sl", "name" : "Slovenščina", "version" : 3 }
