--- a/lang/jp.json
+++ b/lang/jp.json
@@ -1,4 +1,4 @@
-{	"version": 3,
+{	"version": 4,
 	"strings": [
 		["GEN00001","終了"],
 		["GEN00002","OK"],
@@ -64,7 +64,7 @@
 		["FRM10029","excavator.exeへの接続の確立に失敗しました。NiceHash QuickMinerトラブルシューティング・ガイドをご参照ください。"],
 		["FRM10030","Excavator.exeがマイニングを停止しました。"],
 		["FRM10031","十分な仮想メモリがありません。仮想メモリを増やすか、物理メモリを増設してください。"],
-		["FRM10040","ゲームモードが有効化されたままです。NiceHash QuickMinerを終了する前にゲームモードを無効化してください。"],
+		["FRM10040","ゲームモードが有効化されたままですが、本当にNiceHash QuickMinerを終了しますか？"],
 		["FRM10041","この操作をするとNiceHash QuickMinerが終了します。\n\n本当に終了しますか？"],
 		["FRM10042","ディスプレイに接続されたビデオカードを検出できません。ディスプレイ接続に古いビデオカードを使用している可能性があります。"],
 		["FRM10043","ディスプレイに接続されたプライマリGPUでゲームモードを有効化しました。このGPUでのマイニングを停止し、ゲーム用オーバークロック設定を適用しました。"],
