--- a/lang/dump_en.json
+++ b/lang/dump_en.json
@@ -1,4 +1,4 @@
-{	"version": 4,
+{	"version": 5,
 	"strings": [
 		["GEN00001","Exit"],
 		["GEN00002","OK"],
@@ -24,7 +24,7 @@
 		["INST0016","Apply OPTIMIZE (Lite) for all devices"],
 
 		["PROG0001","NiceHash QuickMiner is already running!"],
-		["PROG0002","It has been detected that NiceHah QuickMiner has crashed your PC."],
+		["PROG0002","It has been detected that NiceHash QuickMiner has crashed your PC."],
 		["PROG0003","Would you like to reset all set OPTIMIZE profiles back to default (Manual) value for all video cards?"],
 		["PROG0004","Cannot start NiceHash QuickMiner.Error:\n\n - missing files\n\nSome files were deleted by a 3rd party program - most likely AV."],
 		["PROG0005","Error installing!\n\nNiceHash QuickMiner was unable to continue with the installation. Error:"],
@@ -87,6 +87,7 @@
 		["FRM10102","Apply MSI interrupts"],
 		["FRM10103","MSI disabled! Please, enable MSI for better stability!"],
 		["FRM10201","Finished loading!"],
+		["FRM10301","Cannot change during Game Mode.\n\nPlease, deactivate Game Mode first!"],
 
 		["FRM20001","Invalid or no mining Bitcoin Address set. Please enter your NiceHash Mining Address:"],
 		["FRM20002","Clipboard paste"],
