--- a/lang/avail1.json
+++ b/lang/avail1.json
@@ -6,6 +6,7 @@
 		{ "short" : "pt", "name" : "Português", "version" : 4 },
 		{ "short" : "ru", "name" : "Русский", "version" : 4 },
 		{ "short" : "ja", "name" : "日本語", "version" : 4 },
-		{ "short" : "sl", "name" : "Slovenščina", "version" : 4 }
+		{ "short" : "zh", "name" : "中文", "version" : 5 },
+		{ "short" : "sl", "name" : "Slovenščina", "version" : 5 }
 	]
 }
