--- a/lang/fr.json
+++ b/lang/fr.json
@@ -24,7 +24,7 @@
 		["INST0016","Appliquer OPTIMISER (Lite) pour tous les appareils"],
 
 		["PROG0001","NiceHash QuickMiner est déjà en cours d'exécution!"],
-		["PROG0002","Il a été détecté que NiceHash QuickMiner a écrasé votre PC."],
+		["PROG0002","Il a été détecté que NiceHah QuickMiner a écrasé votre PC."],
 		["PROG0003","Souhaitez vous réinitialiser tous les profils OPTIMISER définis par défaut (Manuel) valeur pour toutes les cartes vidéo?"],
 		["PROG0004","Impossible de démarrer NiceHash QuickMiner.Erreur:\n\n - fichiers manquants\n\nSome les fichiers ont été supprimés par un programme tiers - le plus probable AV."],
 		["PROG0005","Erreur lors de l'installation!\n\nNiceHash QuickMiner n'a pas pu continuer l'installation. Erreur:"],
@@ -42,7 +42,7 @@
 		["FRM10007","Connexion complètement détaillé"],
 		["FRM10008","Voir Manuels"],
 		["FRM10009","Aide"],
-		["FRM10010","Commence avec windows"],
+		["FRM10010","Commencer avec windows"],
 		["FRM10011","CPU Minière"],
 		["FRM10012","Modifier le fichier de commande"],
 		["FRM10013","Modifier fichier config"],
@@ -64,7 +64,7 @@
 		["FRM10029","Échec de l'établissement de la connexion à excavator.exe. Veuillez consulter NiceHash QuickMiner guide de dépannage."],
 		["FRM10030","Excavator.exe a été arrêté!"],
 		["FRM10031","Ce PC n'a pas assez de mémoire virtuelle. Augmentez la mémoire virtuelle ou ajoutez plus de RAM physique."],
-		["FRM10040","Mode de jeu toujours actif!\n\nSouhaitez-vous quand même quitter NiceHash QuickMiner?"],
+		["FRM10040","Mode de jeu toujours actif!\n\nSouhaitez-vous quand même quitter NiceHash QuickMiner?."],
 		["FRM10041","Cette action se fermera NiceHash QuickMiner.\n\nÊtes-vous sûr de vouloir quitter NiceHash QuickMiner?"],
 		["FRM10042","Impossible de détecter la carte vidéo avec l'écran connecté ou vous utilisez peut-être une ancienne carte vidéo pour l'affichage!"],
 		["FRM10043","Mode jeu activé sur le GPU principal avec affichage. Le minage s'est arrêtée sur ce GPU et des overclockings de jeu ont été appliqués pour cela.\n\nJeu activé!"],
@@ -122,7 +122,7 @@
 		["FRM90010","Langue de l'interface"],
 		["FRM90011","Donnez à votre rig minière un nom unique et cool!"],
 		["FRM90012","Nom du travailleur:"],
-		["FRM90013","Souhaitez-vous que NiceHash QuickMiner démarre automatiquement avec Windows?"],
+		["FRM90013","Souhaitez-vous que NiceHash QuickMiner démarrer automatiquement avec Windows?"],
 		["FRM90014","Démarrage automatique avec Windows (Méthode planificateur de tâches)"],
 		["FRM90015","Comment gérer votre PC en cas de panne de la (des) carte (s) vidéo?"],
 		["FRM90016","Action de gestion des erreurs:"],
@@ -134,7 +134,7 @@
 		["FRM90022","RECOMMANDÉ! N'oubliez pas de vérifier la solution One - Click - Optimiz pour GTX 1000 séries, TITAN V, RTX 2000 séries, TITAN RTX et RTX 3000 série cartes vidéo de bureau.Fiabilité élevée et très bon rendement garantis!"],
 		["FRM90023","Si vous êtes débutant, nous vous recommandons d'aller maintenant à Gestionnaire de Rig.Si vous souhaitez régler manuellement votre (vos) carte (s) vidéo, Aller à la page suivante."],
 		["FRM90024","Prenez-moi au gestionnaire de Rig >>"],
-		["FRM90025","Il peut prendre plusieurs minutes pour votre Mineur apparaisse dans le Gestionnaire de Rig.S'il vous plaît, soyez patient!"],
+		["FRM90025","Il peut prendre plusieurs minutes pour votre Mineur apparaisse dans Gestionnaire de Rig.Veuillez, soyez patient!"],
 		["FRM90026","OCTune est un puissant outil d'overclocking, conçu pour couvrir tous les besoins de chaque mineur. Il est suffisamment puissant pour prendre en charge les modifications de core clocks, memory clocks, limites de puissance, a la capacité de modifier le comportement des ventilateurs et vous permet de sous-tension des cartes vidéo pour réduire la consommation d'énergie et augmenter l'efficacité. Désactivez tout autre outil d'overclocking et laissez OCTune prendre le contrôle total!"],
 		["FRM90027","Ouvrez OCTune pour peaufiner >>"],
 
