--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,4 +1,4 @@
-{	"version": 4,
+{	"version": 5,
 	"strings": [
 		["GEN00001","Выход"],
 		["GEN00002","OK"],
@@ -87,7 +87,7 @@
 		["FRM10102","Примените прерывания MSI"],
 		["FRM10103","MSI отключены! Пожалуйста, включите MSI для повышения стабильности!"],
 		["FRM10201","Загрузка завершена!"],
-
+		["FRM10301","Невозможно изменить в режиме игры.\n\nПожалуйста, сперва деактивируйте режим игры!"],
 		["FRM20001","Биткоин-адрес для майнинга недопустимый или отсутствует. Пожалуйста, введите свой адрес NiceHash для майнинга:"],
 		["FRM20002","Вставить из буфера обмена"],
 		["FRM20003","введите свой адрес для майнинга здесь"],
